--- a/index.html
+++ b/index.html
@@ -3,44 +3,62 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Kat Personal Website</title>
-        <link rel="stylesheet" href="style.css">
+        <title>Katarina Beck Personal Website</title>
+        <!-- <link rel='stylesheet' media='screen and (min-width: 365px) and (max-width: 1190px)' href='mobile.css' />
+        <link rel='stylesheet' media='screen and (min-width: 1191px) and (max-width: 3000px)'href="style2.css"> -->
+        <link rel='stylesheet' href="style.css">
     </head>
     <body>
         <div class="wrapper">
+            <div class="backpic">
+                <img class="city" src="city.jpg" alt="nyc buildings">
+            </div>
             <div class="name">
-                <h1>Kat Beck</h1>
+                Kat Beck
             </div>
             <div class="menu">
                 <ul>
-                    <li><a class="about" href="#about">me</a></li>
-                    <li><a class="cntct" href="mailto:ktrnabk@gmail.com">@</a></li>
-                    <li><a class="cvM" href="cv.pdf" target="_blank">cv</a></li>
-                    <li><a class="workM" href="#work">work</a></li>
+                    <li><a href="#about">me</a></li>
+                    <li><a href="mailto:ktrnabk@gmail.com">@</a></li>
+                    <li><a href="cv.pdf" target="_blank">cv</a></li>
+                    <li><a href="#work">work</a></li>
                 </ul>
             </div>
-            <!-- <div id="bio" class="bio"> -->
-                <div id="about" class="pic">
-                    <img src="kat.jpg" alt="photo of kat">
-                </div>
-                <div class="bar">
-                    
-                </div>
-                <div id="about" class="text">
-                    <p> A bad ass bitch, holding a Bachelors of Arts Degree from 
-                        The University of Mississippi in Theatre with a minor in
-                        buiness. Possessing several years of service industry
-                        knowledge and experience. Activeley seeking experiance
-                        in design. 
-                    </p>
-                </div>
-            <!-- </div> -->
-            <div class="cv">
-                <p><a class="cv" href="cv.pdf" target="_blank">[view cv]</a></p>
+            <div class="arrow">
+                <a>&#8964</a>
             </div>
-            <div class="work">
-
+            <div class="bio">
+                <p>
+                    I am a 23 year old recent graduate with a Bachelors of Arts 
+                    Degree from The University of Mississippi in Theatre and a minor in buiness. 
+                    I possess several years of service industry knowledge and experience. 
+                    I am activeley seeking experiance in design or culinary disciplines.
+                </p>
+            </div>
+            <div class="links">
+                <a id="sos" class="click" href="cv.pdf" target="_blank">CV</a>
+                <a id="sos" class="click" href="mailto:ktrnabk@gmail.com">@</a>
+                <a id="sos" class="click" >IN</a>
+            </div>
+            <div class="biopic">
+                <a href="https://www.mapcrunch.com/" target="_blank"><img id="circle" src="kat.jpg" alt="photo of kat in a mask"></a>
+            </div>
+            <div id="work" class="workpics">
+                <img id="bttmpic" src="art.jpg" alt="photo of kat painting a mirror">
+                <!-- <a class="txt">ART</a> -->
+                <img id="bttmpic" src="food.jpg" alt="photo of food on the pavement">
+                <!-- <a class="txt">FOOD</a> -->
+                <img id="bttmpic" src="makeup.jpg" alt="photo of kat">
+                <!-- <a class="txt">MAKEUP</a> -->
+                
+            </div>
+            <div class="worktext">
+                <a class="txt1">ART</a><br />
+                <a class="txt2">FOOD</a><br />
+                <a class="txt3">MAKEUP</a>
             </div>
         </div>
     </body>
-</html>
+    <footer>
+
+    </footer>
