--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Katarina Beck Personal Website</title>
-        <!-- <link rel='stylesheet' media='screen and (min-width: 365px) and (max-width: 1190px)' href='mobile.css' />
-        <link rel='stylesheet' media='screen and (min-width: 1191px) and (max-width: 3000px)'href="style2.css"> -->
-        <link rel='stylesheet' href="style.css">
+        <link rel='stylesheet' media='screen and (min-width: 100px) and (max-width: 1100px)' href='mobile.css'>
+        <link rel='stylesheet' media='screen and (min-width: 1101px) and (max-width: 3000px)' href="style.css">
+        <!-- <link rel='stylesheet' href="style.css"> -->
     </head>
     <body>
         <div class="wrapper">
