files via upload
version 1 of shane website

--- a/index.html
+++ b/index.html
@@ -3,59 +3,51 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Katarina Beck Personal Website</title>
-        <link rel='stylesheet' media='screen and (min-width: 100px) and (max-width: 1100px)' href='mobile.css'>
-        <link rel='stylesheet' media='screen and (min-width: 1101px) and (max-width: 3000px)' href="style.css">
+        <title>Shane Corbett Personal Website</title>
+        <link rel='stylesheet' media='screen and (min-width: 10px) and (max-width: 1330px)' href='mobile.css'>
+        <link rel='stylesheet' media='screen and (min-width: 1331px) and (max-width: 3000px)' href="style.css">
         <!-- <link rel='stylesheet' href="style.css"> -->
     </head>
     <body>
         <div class="wrapper">
-            <div class="backpic">
-                <img class="city" src="city.jpg" alt="nyc buildings">
+            <div class="backpic" style="text-align: center;">
+                <img class="city" src="snow.jpg" alt="nyc buildings">
             </div>
             <div class="name">
-                Kat Beck
+                Shane Corbett
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="#about">me</a></li>
-                    <li><a href="mailto:ktrnabk@gmail.com">@</a></li>
-                    <li><a href="cv.pdf" target="_blank">cv</a></li>
+                    <li><a href="#bio">me</a></li>
+                    <li><a href="mailto:shanecorbett@gmail.com">@</a></li>
+                    <li><a href="shaneCV.pdf" target="_blank">cv</a></li>
                     <li><a href="#work">work</a></li>
                 </ul>
             </div>
             <div class="arrow">
                 <a>&#8964</a>
             </div>
-            <div class="bio">
+            <div class="bio" id="bio">
                 <p>
-                    I am a 23 year old recent graduate with a Bachelors of Arts 
-                    Degree from The University of Mississippi in Theatre and a minor in buiness. 
-                    I possess several years of service industry knowledge and experience. 
-                    I am activeley seeking experiance in design or culinary disciplines.
+                    I am data man. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
             </div>
             <div class="links">
-                <a id="sos" class="click" href="cv.pdf" target="_blank">CV</a>
-                <a id="sos" class="click" href="mailto:ktrnabk@gmail.com">@</a>
-                <a id="sos" class="click" >IN</a>
+                <a id="sos" class="click" href="shaneCV.pdf">CV</a>
+                <a id="sos" class="click" href="mailto:shanecorbett@gmail.com">@</a>
+                <a id="sos" class="click" href="https://www.linkedin.com/in/shane-corbett-426699190/">IN</a>
             </div>
             <div class="biopic">
-                <a href="https://www.mapcrunch.com/" target="_blank"><img id="circle" src="kat.jpg" alt="photo of kat in a mask"></a>
+                <img id="circle" src="shane.jpg" alt="photo of kat in a mask">
             </div>
-            <div id="work" class="workpics">
-                <img id="bttmpic" src="art.jpg" alt="photo of kat painting a mirror">
-                <!-- <a class="txt">ART</a> -->
-                <img id="bttmpic" src="food.jpg" alt="photo of food on the pavement">
-                <!-- <a class="txt">FOOD</a> -->
-                <img id="bttmpic" src="makeup.jpg" alt="photo of kat">
-                <!-- <a class="txt">MAKEUP</a> -->
-                
-            </div>
-            <div class="worktext">
-                <a class="txt1">ART</a><br />
-                <a class="txt2">FOOD</a><br />
-                <a class="txt3">MAKEUP</a>
+            <div class="worktext" id="work">
+                <a id="text1" class="worktext">PROJECT 1</a><br />
+                <a id="text2" class="worktext">PROJECT 2</a><br />
+                <a id="text3" class="worktext">PROJECT 3</a>
             </div>
         </div>
     </body>
